execution_engine/build_err.txt
    Checking execution_engine v0.1.0 (C:\Users\gabri\bongus\bongus_trading_bot\execution_engine)
error[E0599]: no function or associated item named `new` found for struct `WsConnectionManager` in the current scope
   --> src\main.rs:41:47
    |
 41 |     let mut ws_manager = WsConnectionManager::new(binance_ws_url, symbol, tx);
    |                                               ^^^ function or associated item not found in `WsConnectionManager`
    |
   ::: src\binance_ws.rs:177:1
    |
177 | pub struct WsConnectionManager;
    | ------------------------------ function or associated item `new` not found for this struct
    |
    = help: items from traits can only be used if the trait is implemented and in scope
    = note: the following traits define an item `new`, perhaps you need to implement one of them:
            candidate #1: `Bit`
            candidate #2: `Digest`
            candidate #3: `KeyInit`
            candidate #4: `KeyIvInit`
            candidate #5: `Mac`
            candidate #6: `UniformSampler`
            candidate #7: `VariableOutput`
            candidate #8: `VariableOutputCore`
            candidate #9: `aws_lc_rs::aead::BoundKey`
            candidate #10: `parking_lot_core::thread_parker::ThreadParkerT`

warning: unused variable: `symbol`
   --> src\binance_ws.rs:132:33
    |
132 | ...                   let symbol = payload.get("s").and_then(|v| v.as_str()).unwrap_or("");
    |                           ^^^^^^ help: if this is intentional, prefix it with an underscore: `_symbol`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `mark_price`
   --> src\binance_ws.rs:133:33
    |
133 | ...                   let mark_price = payload.get("p").and_then(|v| v.as_str()).unwrap_or("0");
    |                           ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_mark_price`

warning: unused variable: `symbol`
   --> src\order_manager.rs:108:36
    |
108 |                 WsEvent::L2Depth { symbol, bids, asks } => {
    |                                    ^^^^^^ help: try ignoring the field: `symbol: _`

warning: unused variable: `bids`
   --> src\order_manager.rs:108:44
    |
108 |                 WsEvent::L2Depth { symbol, bids, asks } => {
    |                                            ^^^^ help: try ignoring the field: `bids: _`

warning: unused variable: `asks`
   --> src\order_manager.rs:108:50
    |
108 |                 WsEvent::L2Depth { symbol, bids, asks } => {
    |                                                  ^^^^ help: try ignoring the field: `asks: _`

For more information about this error, try `rustc --explain E0599`.
warning: `execution_engine` (bin "execution_engine") generated 5 warnings
error: could not compile `execution_engine` (bin "execution_engine") due to 1 previous error; 5 warnings emitted
